[package]
name = "is_false_rs"
version = "0.1.2"
edition = "2021"
license = "AGPL-3.0"
description = "A Rust library for checking if a value is false."
homepage = "https://github.com/lemon-mint/isfalse-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
is_true_rs = "0.1.2"
